pod-security-cel/baseline/disallow-host-path/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-path
policies:
- ../disallow-host-path.yaml
resources:
- ../../../pod-security/baseline/disallow-host-path/resource.yaml
results:
- kind: CronJob
  policy: disallow-host-path
  resources:
  - badcronjob01
  - badcronjob02
  result: fail
  rule: host-path
- kind: Deployment
  policy: disallow-host-path
  resources:
  - baddeployment01
  - baddeployment02
  result: fail
  rule: host-path
- kind: Pod
  policy: disallow-host-path
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: host-path
- kind: CronJob
  policy: disallow-host-path
  resources:
  - goodcronjob01
  - goodcronjob02
  result: pass
  rule: host-path
- kind: Deployment
  policy: disallow-host-path
  resources:
  - gooddeployment01
  - gooddeployment02
  result: pass
  rule: host-path
- kind: Pod
  policy: disallow-host-path
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: host-path
